fixed validation of userID in requests
