# docs/swagger.json
@@ -74,17 +74,6 @@
                 ],
                 "summary": "Join any available game",
                 "operationId": "joinAnyGame",
-                "parameters": [
-                    {
-                        "description": "Join any game request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/server.JoinAnyGameRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -561,14 +550,8 @@
         "server.CreateGameRequest": {
             "type": "object",
             "properties": {
-                "gameID": {
-                    "type": "string"
-                },
                 "private": {
                     "type": "boolean"
-                },
-                "userID": {
-                    "type": "string"
                 }
             }
         },
@@ -625,17 +608,6 @@
             "properties": {
                 "gameID": {
                     "type": "string"
-                },
-                "userID": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.JoinAnyGameRequest": {
-            "type": "object",
-            "properties": {
-                "userID": {
-                    "type": "string"
                 }
             }
         },
@@ -644,9 +616,6 @@
             "properties": {
                 "gameID": {
                     "type": "string"
-                },
-                "userID": {
-                    "type": "string"
                 }
             }
         },
@@ -654,9 +623,6 @@
             "type": "object",
             "properties": {
                 "gameID": {
-                    "type": "string"
-                },
-                "userID": {
                     "type": "string"
                 },
                 "x": {
